    options (``strip_elements_with_classes`` and ``strip_classes``
    settings).

* docutils/io.py:

  - Added code to determine the input encoding from data: encoding
    declarations or the presence of byte order marks (UTF-8 & UTF-16).
  - Added support for IronPython 1.0.

* docutils/nodes.py:

  - Added ``document.__getstate__`` method, for pickling.

* docutils/parsers/rst/states.py:

  - Unquoted targets beginning with an underscore (``.. __target:
    URI``) are no longer accepted.
  - Added support for multiple attributions in a physical block quote
    (indented text block), dividing it into multiple logical block
    quotes.
  - Added support for unicode bullets in bullet lists: "•", "‣", and
    "⁃".
  - Added support for new object-oriented directive interface,
    retaining compatibility to the old functional interface.
  - Added support for throwing ``DirectiveError``'s from within
    directive code.

* docutils/parsers/rst/__init__.py:

  - Added ``Directive`` base class.
  - Added ``DirectiveError`` base class.
  - Fixed ``file_insertion_enabled`` & ``raw_enabled`` setting
    definitions.

* docutils/parsers/directives/:

  - Refactored all reStructuredText directives to use the new
    object-oriented directive interface.  Errors are now (mostly)
    thrown using the new ``DirectiveError`` class.

* docutils/parsers/directives/misc.py:

  - Added ``start-after`` and ``end-before`` options to ``include``
    directive; thanks to Stefan Rank.

* docutils/transforms/universal.py:

  - Added ``StripClassesAndElements`` transform to remove from the
    document tree all elements with classes in
    ``settings.strip_elements_with_classes`` and all "classes"
    attribute values in ``self.document.settings.strip_classes``.

* docutils/transforms/writer_aux.py:

  - Added ``Admonitions`` transform to transform specific admonitions
    (like ``note``, ``warning``, etc.) into generic admonitions with a
    localized title.
